<resources>
    <string name="app_name">Contraloria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="mision">Misión y Visión</string>
    <string name="autocontrol">Guía de Autocontrol</string>
    <string name="buenaspracticas">Buenas Prácticas</string>
    <string name="ods">ODS</string>
    <string name="guiaaux">Guía Auxiliar</string>
    <string name="codetica">Código de ética</string>
    <string name="portal">Portal Nacional</string>
    <string name="title_activity_guia__aux">Guía Auxiliar</string>
    <string name="title_activity_mision">Misión y Visión</string>
    <string name="content_activity_mision">
        Auxiliar a la Asamblea Nacional y al Consejo de Estado en la ejecución de la más alta fiscalización sobre los
        órganos del Estado y Gobierno, proponer la política integral en materia de preservación de las finanzas públicas
        y el control económico – administrativo, dirigir, ejecutar y comprobar su cumplimiento; dirigir
        metodológicamente y supervisar el Sistema Nacional de Auditoría, ejecutar las acciones necesarias con el fin de
        velar por la correcta y transparente administración del patrimonio público, prevenir y luchar contra la
        corrupción.
    </string>
    <string name="content_activity_vision">
        Somos un órgano del Estado cubano, constitucionalmente reconocido, que se distingue y caracteriza por sus
        valores éticos, alta profesionalidad y nivel de organización, capaz de influir en la creación de una cultura de
        responsabilidad, eficiente empleo de los fondos públicos y probidad administrativa, para prevenir y enfrentar
        indisciplinas, ilegalidades y manifestaciones de corrupción administrativa.
    </string>
    <string name="objetivos_desarrollo_sostenible">ODS</string>
    <string name="guia_auxiliar">Teniendo en cuenta las experiencias acumuladas, como resultado del cumplimiento de las
        funciones, atribuciones y obligaciones, asignadas a la Contraloría General de la República, por la Ley 107,
        aprobada por la Asamblea Nacional del Poder Popular el 1ro de agosto del 2009 y particularmente, en su artículo
        31 inciso k) “supervisar y verificar el proceso de elaboración, ejecución y liquidación del presupuesto del
        Estado;” y a partir de la sistematización y análisis de las principales limitaciones y deficiencias que se
        detectan, del estudio de sus tendencias y causas; así como de las políticas y normas legales establecidas,
        ponemos a disposición de los presidentes de los órganos locales del Poder Popular, a título de recomendación,
        una herramienta metodológica para el control y fiscalización de los presupuestos locales, como una guía
        elemental para la organización y planificación del trabajo, debe considerarse como un conjunto de ideas que en
        su aplicación serán enriquecidas; están inspiradas en la necesidad de ejercer una labor eminentemente preventiva
        y formadora de una cultura de disciplina, responsabilidad, transparencia, rendición de cuentas y probidad
        administrativa.
    </string>
    <string name="guia_auxiliar0">
         1. Contribuir a la eficacia en el control y la fiscalización de la ejecución presupuestaria, desde las
        funciones de dirección que corresponde a los Presidentes de las Asambleas Locales del Poder Popular, en su papel
        rector de la gobernanza, para favorecer el cumplimiento del Plan y los Objetivos Económicos Sociales aprobados
        en sus respectivas Asambleas, impregnados del compromiso de cumplir los Lineamientos de la Política Económica y
        Social del Partido y la Revolución, aprobados en el 7mo. Congreso y en los Objetivos de su Primera Conferencia
        Nacional.

        \n 2. Perfeccionar y desarrollar a plenitud, los mecanismos de dirección, control y fiscalización en materia
        presupuestaria, en el interés de elevar la eficacia del gasto público, incrementar los ingresos, con total
        transparencia y probidad, conjugando las actividades de orientación, asesoramiento, prevención y exigencia
        oportuna.
        \n 3. Lograr mayor integralidad, coordinación, armonización y efectividad, en la labor que corresponde a los
        delegados, Consejos Populares y las comisiones de las asambleas, con las administrativas que corresponden a las
        direcciones funcionales de los CAP y CAM; situar a éstas últimas en sintonía y frecuencia, con las necesidades,
        sentir y aporte de la población; en ese objetivo materializar la Rendición de Cuentas de los directivos y lograr
        la más amplia participación ciudadana.

    </string>
</resources>